--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_example">Экшн =)</string>
-
     <string name="action_settings">Настройки</string>
     <string name="deg">°</string>
     <string name="action_refresh" translatable="true">Refresh</string>
@@ -36,7 +34,7 @@
     <string name="add_item">Добавить вещь</string>
     <string name="delete_item">Удалить вещь</string>
     <string name="find_by_teg_label">Введите ключевые слова через запятую</string>
-    <string name="buttin_photo_add">Add...</string>
+    <string name="photo_add">Добавить фото</string>
     <string name="image_view_adding">Picture of the apparel.</string>
     <string name="textView_name_add">Name:</string>
     <string name="textView">Т ношения:</string>
